# internal/api/gen/oas_operations_gen.go
@@ -46,7 +46,6 @@ const (
 	ListTradeLedgerOperation         OperationName = "ListTradeLedger"
 	ListWorldBattlesOperation        OperationName = "ListWorldBattles"
 	ListWorldInvitationsOperation    OperationName = "ListWorldInvitations"
-	ListWorldKingdomsOperation       OperationName = "ListWorldKingdoms"
 	ListWorldWondersOperation        OperationName = "ListWorldWonders"
 	MergeArmyOperation               OperationName = "MergeArmy"
 	PayWonderMilestoneOperation      OperationName = "PayWonderMilestone"
