# internal/api/gen/oas_parameters_gen.go
@@ -175,11 +175,6 @@ type ListWorldInvitationsParams struct {
 	WorldID string
 }
 
-// ListWorldKingdomsParams is parameters of listWorldKingdoms operation.
-type ListWorldKingdomsParams struct {
-	WorldID string
-}
-
 // ListWorldWondersParams is parameters of listWorldWonders operation.
 type ListWorldWondersParams struct {
 	WorldID string
